# event_portal

./: Dockerfile  README.md  bootstrap.sh  pyproject.toml
server/: app.py  crud.py  db.py  db_models.py  models.py  schemas.py
server/routers/: events.py
