[tool.poetry]
name = "event_potal"
version = "0.1.0"
description = ""
authors = ["Wataru Manji <manji@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
